--- a/FormativePi01/FormativePi01-2.html
+++ b/FormativePi01/FormativePi01-2.html
@@ -211,11 +211,32 @@
         <div id="Exercise01" class="collapse in  col-lg-12">
             <ol>
 
-            <li>1 Etcher can be found here: https://www.balena.io/etcher/ </li>
+            <li>Etcher can be found here: https://www.balena.io/etcher/ </li>
             <li>Download etcher and make sure you save it to your desktop for easy access.</li>
-            <li></li>
+            <li>Downloading the newest Raspbian Operating System (OS).</li>
+            <li>To download the Raspbian OS go here: https://www.raspberrypi.org/downloads/raspbian/ </li>
+            <li>Make sure to download the version that says <b>with</b> desktop. (have screenshot)</li>
+            <li>Save the ZIP file to your desktop to make the next steps easier. </li>
+            <li>Using Etcher to flash your SD Card</li>
 
                 </ol>
+            </div>
+
+         <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2- SD card</a></div>
+
+        <div id="Exercise02" class="collapse in  col-lg-12">
+
+            <ol>
+                <li>You will need to take your SD card and put it in your SD card slot which is located on the right side of your laptop. You should feel and hear a click when the SD card is properly seated. It should be flush with the side of your laptop.</li>
+                <li>If you do not have a SD card slot see Paulson or a TA to get a SD card reader.</li>
+                <li>Open Etcher and make sure you see that it recognizes that you have an SD card in. (screenshot)</li>
+                <li>If you do not see it you will need to restart your laptop.</li>
+                <li>Take the ZIP file that your downloaded earlier and Drag and Drop it into etcher where it says select image. </li>
+                <li>Then hit Flash (it will take a few minutes).</li>
+            </ol>
+            </div>
+
+
             
 
 
