--- a/FormativePi01/FormativePi01-2.html
+++ b/FormativePi01/FormativePi01-2.html
@@ -205,6 +205,7 @@
             <hr />
         </div>
 
+        <!--Exercise 1-->
 
         <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Etcher</a></div>
 
@@ -222,6 +223,8 @@
                 </ol>
             </div>
 
+        <!--Exercise 2-->
+
          <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2- SD card</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
@@ -236,6 +239,29 @@
             </ol>
             </div>
 
+        <!--Exercise 3-->
+
+           <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3- Raspberry PI</a></div>
+
+        <div id="Exercise03" class="collapse in  col-lg-12">
+
+            <ol>
+                <li>While that is flashing you will need to locate a keyboard and mouse and plug them into the Pi at your station (We may not have keyboards and mice for everyone so please share). </li>
+                <li>Once the flash is complete, remove the SD card and put it into the Pi. (gif)</li>
+                <li>Plug your Keyboard and mouse into the Pi and hit the power button, which should be on top or around the monitor in front of you. You should see lights on the Pi.</li>
+                <li>Press the button with the purple dot on it.</li>
+                <li>Follow the on-screen instructions to set your country, language and Time-zone. Check the boxes that say Use English language and Use US keyboard.</li>
+                <li>Make a password and write it down. If you forget it you will need to start over.</li>
+                <li>Check “This screen shows a black border around the desktop” if you have a black border.</li>
+                <li>CONNECT TO WSU GUEST ONLY!!! If prompted make an account and log in.</li>
+                <li>When asked to update, click next. The update will begin, this make take a few minutes. If asked to restart, do so.</li>
+                <li>In the upper right corner of the desktop hover over the Wi-Fi signal to determine the IP address. </li>
+                <li>Write this IP down in the same place as your password. The IP should look something like 10.20.xx.xx</li>
+                <li>In the upper left corner, you will see the raspberry icon. click the raspberry icon, then preferences, and Raspberry Pi Configuration.</li>
+                <li>Click the interfaces tab and Enable SSH and VNC.</li>
+
+            </ol>
+            </div>
 
             
 
