--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -77,8 +77,8 @@
             <input class=" text-danger btn-block btn-lg" type="submit" name="Submit" value="SUBMIT -once you have entered your first name, last name, StarID, email, class and section- SUBMIT"><br />
         </div>
 
-        <div class="h3 text-danger">
-            100 Points<hr />
+        <div class="h3 text-danger col-lg-12">
+            60 Points<hr />
         </div>
 
 
@@ -180,32 +180,46 @@
 
 
 
-        <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Exercise 11-Submit Your Assignment</a></div>
+        <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Exercise 4-Submit Screenshot</a></div>
 
         <div id="ExerciseSubmit" class="collapse in  col-lg-12">
             <p>
                 For this final Exercise, and to complete this assignment please read all of these instructions.<br />
-                Make sure that you have
-            </p>
+                You are submitting a screen shot of your work to the appropriate D2L Assignment folder.<br />
+                Make sure that you have the following programs running on your Raspberry Pi, depicting:</p>
             <ul>
-                <li>completed all the exercises,</li>
-                <li>taken all the screen shots,</li>
-                <li>combined the screen shots into one .pdf file,</li>
-                <li>merged the screen shot .pdf file with the VPN .pdf file,</li>
-                <li>uploaded the .pdf file to the D2L  'Formative00' Assignment folder,</li>
-                <li>and sent a confirming professional email to Professor Paulson.</li>
+                <li>Chromium web browser, open to D2L course, with your name in top right,</li>
+                <li>Rasberry Pi configuration, &#39;Interfaces&#39; tab, showing VNC and SSH enabled,</li>
+                <li>Network Preferences, interface tab, set to wlan0, showing settings,</li>
+                <li>Terminal window, after running <code>cat /etc/os-release</code> and <code>scrot</code> ,</li>
             </ul>
-            When these tasks are completed press the Submit button below.
+            <br />
+            Your screen shot will look something like this:<br /> <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
+                    <img src="ConfigurationScreenShot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> <br />
 
-        <div>
+</div>
+ <div class="col-lg-12 text-primary">
+     <p>
+            (50) 1. Make sure to upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
+</p>
+       <hr />
+     </div>
+
+
+        <div class="col-lg-12">
+            <p>
+            When these tasks are completed press the Submit button below.</p>
+        </div>
+        <hr />
+
             <div class="col-lg-12 text-primary">
-                (10) 13. Assignment submission<br />
+                (10) 2. Assignment submission<br />
                 <!-- Enter your answer in the VALUE field below   GROK -->
-                <input class="form-control" name="q10" type="text" id="q10" value="I have completed all the exercises.">
+                <input class="form-control" name="q10" type="text" id="q10" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder.">
+
             </div>
-        </div>
-            <hr />
-        </div>
+
+                   <hr />
 
 
 
