--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   
+
     <!-- PgP 7/11/2019 summative assignment for Raspberry Pi, Arduino Uno, micro:bit -->
     <!-- Bootstrap -->
     <link href="../../ReadOnly/bootstrap.css" rel="stylesheet">
@@ -124,20 +124,20 @@
         <div id="Exercise01" class="collapse in  col-lg-12">
             <ol>
 
-            <li>Etcher can be found here: https://www.balena.io/etcher/ </li>
-            <li>Download etcher and make sure you save it to your desktop for easy access.</li>
-            <li>Downloading the newest Raspbian Operating System (OS).</li>
-            <li>To download the Raspbian OS go here: https://www.raspberrypi.org/downloads/raspbian/ </li>
-            <li>Make sure to download the version that says <b>with</b> desktop. (have screenshot)</li>
-            <li>Save the ZIP file to your desktop to make the next steps easier. </li>
-            <li>Using Etcher to flash your SD Card</li>
+                <li>Etcher can be found here: https://www.balena.io/etcher/ </li>
+                <li>Download etcher and make sure you save it to your desktop for easy access.</li>
+                <li>Downloading the newest Raspbian Operating System (OS).</li>
+                <li>To download the Raspbian OS go here: https://www.raspberrypi.org/downloads/raspbian/ </li>
+                <li>Make sure to download the version that says <b>with</b> desktop. (have screenshot)</li>
+                <li>Save the ZIP file to your desktop to make the next steps easier. </li>
+                <li>Using Etcher to flash your SD Card</li>
 
-                </ol>
-            </div>
+            </ol>
+        </div>
 
         <!--Exercise 2-->
 
-         <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2- SD card</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2- SD card</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
 
@@ -149,11 +149,11 @@
                 <li>Take the ZIP file that your downloaded earlier and Drag and Drop it into etcher where it says select image. </li>
                 <li>Then hit Flash (it will take a few minutes).</li>
             </ol>
-            </div>
+        </div>
 
         <!--Exercise 3-->
 
-           <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3- Raspberry PI</a></div>
+        <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3- Raspberry PI</a></div>
 
         <div id="Exercise03" class="collapse in  col-lg-12">
 
@@ -173,9 +173,9 @@
                 <li>Click the interfaces tab and Enable SSH and VNC.</li>
 
             </ol>
-            </div>
+        </div>
 
-            
+
 
 
 
@@ -186,7 +186,8 @@
             <p>
                 For this final Exercise, and to complete this assignment please read all of these instructions.<br />
                 You are submitting a screen shot of your work to the appropriate D2L Assignment folder.<br />
-                Make sure that you have the following programs running on your Raspberry Pi, depicting:</p>
+                Make sure that you have the following programs running on your Raspberry Pi, depicting:
+            </p>
             <ul>
                 <li>Chromium web browser, open to D2L course, with your name in top right,</li>
                 <li>Rasberry Pi configuration, &#39;Interfaces&#39; tab, showing VNC and SSH enabled,</li>
@@ -194,32 +195,34 @@
                 <li>Terminal window, after running <code>cat /etc/os-release</code> and <code>scrot</code> ,</li>
             </ul>
             <br />
-            Your screen shot will look something like this:<br /> <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
-                    <img src="ConfigurationScreenShot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> <br />
+            Your screen shot will look something like this:<br />
+            <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
+                <img src="ConfigurationScreenShot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>
+            <br />
 
-</div>
- <div class="col-lg-12 text-primary">
-     <p>
-            (50) 1. Make sure to upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
-</p>
-       <hr />
-     </div>
+        </div>
+        <div class="col-lg-12 text-primary">
+            <p>
+                (50) 1. Make sure to upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
+            </p>
+            <hr />
+        </div>
 
 
         <div class="col-lg-12">
             <p>
-            When these tasks are completed press the Submit button below.</p>
+                When these tasks are completed press the Submit button below.
+            </p>
         </div>
         <hr />
 
-            <div class="col-lg-12 text-primary">
-                (10) 2. Assignment submission<br />
-                <!-- Enter your answer in the VALUE field below   GROK -->
-                <input class="form-control" name="q10" type="text" id="q10" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder.">
+        <div class="col-lg-12 text-primary">
+            (10) 2. Assignment submission<br />
+            <!-- Enter your answer in the VALUE field below   GROK -->
+            <input class="form-control" name="q10" type="text" id="q10" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder.">
+        </div>
 
-            </div>
-
-                   <hr />
+        <hr />
 
 
 
