Exercise 4- installing scrot

--- a/FormativePi01/FormativePi01-2.html
+++ b/FormativePi01/FormativePi01-2.html
@@ -272,6 +272,16 @@
                 <li>In the upper left corner you will see a black icon with >_ written on it. It is called a Terminal. Open the Terminal. </li>
                 <li>Once the Terminal is open type “sudo apt-get install scrot”.</li>
                 <li>Once that is complete, open up the browser and navigate to the onedrive website where you will sign into your StarID and password.</li>
+                <li>Then reopen the terminal if you closed it, type in “scrot”. Make sure that the terminal does not cover your entire screen and that onedrive can be seen in the background.</li>
+                <li>Close the Terminal and open up File Manager, it should be the icon to the left of the terminal and look like a file. (screenshot)</li>
+                <li>In your file manager you should a file named something like 2019-mm-dd. (screenshot)</li>
+                <li>Drag and drop that file into your onedrive.</li>
+                <li>Once that is completed you can close all windows.</li>
+                <li>Click the raspberry icon in the upper left and click shutdown.</li>
+                <li>When the monitor switches back to your lap top desktop you can power off the Pi.</li>
+                <li>When you no longer see the red light you can safely remove you SD card.</li>
+                <li>DO NOT REMOVE THE SD CARD WITH THE POWER ON! You can corrupt your SD card and lose everything. </li>
+                <li>Find the screenshot that you took and upload it to the proper D2L submission folder.</li>
 
             </ol>
 
