--- a/FormativePi01/FormativePi01-2.html
+++ b/FormativePi01/FormativePi01-2.html
@@ -264,7 +264,9 @@
 
             </div>
 
-             <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 4- Installing Scrot</a></div>
+       <!--Exercise  4-->
+
+             <div class="col-lg-12"><a href="#Exercise04" class="btn btn-info" data-toggle="collapse">Exercise 4- Installing Scrot</a></div>
 
         <div id="Exercise04" class="collapse in  col-lg-12">
 
@@ -273,8 +275,14 @@
                 <li>Once the Terminal is open type “sudo apt-get install scrot”.</li>
                 <li>Once that is complete, open up the browser and navigate to the onedrive website where you will sign into your StarID and password.</li>
                 <li>Then reopen the terminal if you closed it, type in “scrot”. Make sure that the terminal does not cover your entire screen and that onedrive can be seen in the background.</li>
-                <li>Close the Terminal and open up File Manager, it should be the icon to the left of the terminal and look like a file. (screenshot)</li>
-                <li>In your file manager you should a file named something like 2019-mm-dd. (screenshot)</li>
+                <li>Close the Terminal and open up File Manager, it should be the icon to the left of the terminal and look like a file .</li> </ol>
+
+                  <img alt="inked img"  class="img-responsive"   src="Inked2019-07-24-121810_1920x1080_scrot_LI.jpg"  />
+
+                <p><b>In your file manager you should a file named something like 2019-mm-dd.</b></p>   <br />
+
+            <img alt="Scrot File"   class="img-responsive"  src="2019-07-24-122130_1920x1080_scrot.png" />
+            <ol>
                 <li>Drag and drop that file into your onedrive.</li>
                 <li>Once that is completed you can close all windows.</li>
                 <li>Click the raspberry icon in the upper left and click shutdown.</li>
@@ -297,7 +305,7 @@
 
 
 
-        <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Exercise 11-Submit Your Assignment</a></div>
+        <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Exercise 5-Submit Your Assignment</a></div>
 
         <div id="ExerciseSubmit" class="collapse in  col-lg-12">
             <p>
