--- a/FormativePi01/FormativePi01-2.html
+++ b/FormativePi01/FormativePi01-2.html
@@ -277,11 +277,17 @@
                 <li>Then reopen the terminal if you closed it, type in “scrot”. Make sure that the terminal does not cover your entire screen and that onedrive can be seen in the background.</li>
                 <li>Close the Terminal and open up File Manager, it should be the icon to the left of the terminal and look like a file .</li> </ol>
 
-                  <img alt="inked img"  class="img-responsive"   src="Inked2019-07-24-121810_1920x1080_scrot_LI.jpg"  />
+                   <p>
+                <img src="Inked2019-07-24-121810_1920x1080_scrot_LI.jpg" class="img-responsive img-rounded" alt="File Manager" />
+                <span class="text-center"></span><br />
+            </p>
 
                 <p><b>In your file manager you should a file named something like 2019-mm-dd.</b></p>   <br />
 
-            <img alt="Scrot File"   class="img-responsive"  src="2019-07-24-122130_1920x1080_scrot.png" />
+            <p>
+                <img src="2019-07-24-122130_1920x1080_scrot.png" class="img-responsive img-rounded" alt="Scrot File" />
+                <span class="text-center"></span><br />
+            </p>
             <ol>
                 <li>Drag and drop that file into your onedrive.</li>
                 <li>Once that is completed you can close all windows.</li>
