--- a/FormativePi01/FormativePi01-2.html
+++ b/FormativePi01/FormativePi01-2.html
@@ -274,21 +274,23 @@
                 <li>In the upper left corner you will see a black icon with >_ written on it. It is called a Terminal. Open the Terminal. </li>
                 <li>Once the Terminal is open type “sudo apt-get install scrot”.</li>
                 <li>Once that is complete, open up the browser and navigate to the onedrive website where you will sign into your StarID and password.</li>
-                <li>Then reopen the terminal if you closed it, type in “scrot”. Make sure that the terminal does not cover your entire screen and that onedrive can be seen in the background.</li>
-                <li>Close the Terminal and open up File Manager, it should be the icon to the left of the terminal and look like a file .</li> </ol>
+                <li>Then reopen the terminal if you closed it, type in “scrot”. Make sure that the terminal does not cover your entire screen and that onedrive can be seen in the background.</li> </ol>
 
-                   <p>
-                <img src="Inked2019-07-24-121810_1920x1080_scrot_LI.jpg" class="img-responsive img-rounded" alt="File Manager" />
+                <p>
+               <a href="FormativePi01-2.html" class="img-responsive img-rounded" target="popup" onclick="window.open('Inked2019-07-24-121810_1920x1080_scrot_LI.jpg', 'popup'); return false;">
+                <img src="Inked2019-07-24-121810_1920x1080_scrot_LI.jpg" class="img-responsive img-rounded" alt="File Manager" width="300" /> </a>
                 <span class="text-center"></span><br />
             </p>
-
-                <p><b>In your file manager you should a file named something like 2019-mm-dd.</b></p>   <br />
+                <ol>
+                <li>Close the Terminal and open up File Manager, it should be the icon to the left of the terminal and look like a file .</li>
+                <li>In your file manager you should a file named something like 2019-mm-dd.</li></ol>
 
             <p>
-                <img src="2019-07-24-122130_1920x1080_scrot.png" class="img-responsive img-rounded" alt="Scrot File" />
+                <a href="FormativePi01-2.html" class="img-responsive img-rounded" target="popup" onclick="window.open('2019-07-24-122130_1920x1080_scrot.png', 'popup'); return false;">
+                <img src="2019-07-24-122130_1920x1080_scrot.png" class="img-responsive img-rounded" alt="Scrot File" width="300" />  </a>
                 <span class="text-center"></span><br />
             </p>
-            <ol>
+                <ol>
                 <li>Drag and drop that file into your onedrive.</li>
                 <li>Once that is completed you can close all windows.</li>
                 <li>Click the raspberry icon in the upper left and click shutdown.</li>
