--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -74,7 +74,7 @@
 
         <div class="col-lg-12">
             <br />
-            <input class=" text-danger btn-block btn-lg" type="submit" name="Submit" value="SUBMIT -once you have entered your first name, last name, StarID, email, class and section- SUBMIT"><br />
+            <input class=" text-danger btn-block btn-lg" type="submit" name="Submit" value="SUBMIT -once you have completed this assignment- SUBMIT"><br />
         </div>
 
         <div class="h3 text-danger col-lg-12">
@@ -95,6 +95,7 @@
                 <li>Create a bootable micro-SD card containing the operating system</li>
                 <li>Boot the Raspberry Pi</li>
                 <li>Connect to the WSU Guest wireless network</li>
+                <li>Configure the Raspberry Pi</li>
                 <li>Use a web browser and other software on the Raspberry Pi</li>
                 <li>Install an application on the Raspberry Pi to take screen shots</li>
                 <li>Do other marvelous things.....</li>
@@ -119,25 +120,39 @@
 
         <!--Exercise 1-->
 
-        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Etcher</a></div>
+        <div class="col-lg-12"><a href="#Exercise01" class="btn btn-info" data-toggle="collapse">Exercise 1-Obtain Operating System</a></div>
 
         <div id="Exercise01" class="collapse in  col-lg-12">
             <ol>
 
-                <li>Etcher can be found here: https://www.balena.io/etcher/ </li>
-                <li>Download etcher and make sure you save it to your desktop for easy access.</li>
-                <li>Downloading the newest Raspbian Operating System (OS).</li>
-                <li>To download the Raspbian OS go here: https://www.raspberrypi.org/downloads/raspbian/ </li>
-                <li>Make sure to download the version that says <b>with</b> desktop. (have screenshot)</li>
-                <li>Save the ZIP file to your desktop to make the next steps easier. </li>
-                <li>Using Etcher to flash your SD Card</li>
+                <li>Open a browser to: <a href="https://www.balena.io/etcher/" class="bg-info text-white" target="_blank">https://www.balena.io/etcher/ </a> </li>
+
+                <li>Download Etcher to your ' 
+                <code><span id="aPath"></span></code>
+                <script>document.getElementById("aPath").innerHTML = Path; </script>
+                ' folder.<br /> </li>
+
+                <li>Open your browser to the following url:<a href="https://www.raspberrypi.org/downloads/raspbian/" class="bg-info text-white" target="_blank">https://www.raspberrypi.org/downloads/raspbian/</a>.<br />
+
+                </li>
+
+                <li>Download the latest ZIP file of the Raspbian Operating System with desktop<br />
+                <a href="RaspbianWithDesktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspbianWithDesktop.PNG', 'popup'); return false;">
+                    <img src="RaspbianWithDesktop.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Raspbian With Desktop<br />                </li>
+
+
+                <li>Save the ZIP file to your  ' 
+                <code><span id="bPath"></span></code>
+                <script>document.getElementById("bPath").innerHTML = Path; </script>
+                ' folder.<br /> </li>
 
             </ol>
+            <hr />
         </div>
 
         <!--Exercise 2-->
 
-        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2- SD card</a></div>
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 2-Flash microSD card</a></div>
 
         <div id="Exercise02" class="collapse in  col-lg-12">
 
@@ -149,11 +164,12 @@
                 <li>Take the ZIP file that your downloaded earlier and Drag and Drop it into etcher where it says select image. </li>
                 <li>Then hit Flash (it will take a few minutes).</li>
             </ol>
+            <hr />
         </div>
 
         <!--Exercise 3-->
 
-        <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3- Raspberry PI</a></div>
+        <div class="col-lg-12"><a href="#Exercise03" class="btn btn-info" data-toggle="collapse">Exercise 3-Boot Raspberry Pi</a></div>
 
         <div id="Exercise03" class="collapse in  col-lg-12">
 
@@ -171,8 +187,8 @@
                 <li>Write this IP down in the same place as your password. The IP should look something like 10.20.xx.xx</li>
                 <li>In the upper left corner, you will see the raspberry icon. click the raspberry icon, then preferences, and Raspberry Pi Configuration.</li>
                 <li>Click the interfaces tab and Enable SSH and VNC.</li>
-
             </ol>
+            <hr />
         </div>
 
 
@@ -180,9 +196,9 @@
 
 
 
-        <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Exercise 4-Submit Screenshot</a></div>
+        <div class="col-lg-12"><a href="#UploadScreenShot" class="btn btn-info" data-toggle="collapse">Upload Screenshot</a></div>
 
-        <div id="ExerciseSubmit" class="collapse in  col-lg-12">
+        <div id="UploadScreenShot" class="collapse in  col-lg-12">
             <p>
                 For this final Exercise, and to complete this assignment please read all of these instructions.<br />
                 You are submitting a screen shot of your work to the appropriate D2L Assignment folder.<br />
@@ -205,30 +221,43 @@
             <p>
                 (50) 1. Make sure to upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
             </p>
+            
+        <div class="col-lg-12 text-danger">
+            <h2>Screen Shot FormativePi01</h2>
+            <hr />
+        </div>
             <hr />
         </div>
 
 
+
+
+        <div class="col-lg-12"><a href="#ExerciseSubmit" class="btn btn-info" data-toggle="collapse">Submit Assignment</a></div>
+
+
         <div class="col-lg-12">
             <p>
-                When these tasks are completed press the Submit button below.
+                When all tasks are completed press the Submit button.
             </p>
+            <hr />
+
         </div>
-        <hr />
 
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
             <input class="form-control" name="q10" type="text" id="q10" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder.">
+            <hr />
+
         </div>
 
-        <hr />
+
 
 
 
         <div class=" col-lg-12">
             <br />
-            <input class=" text-danger btn-block btn-lg" type="submit" name="Submit" value="SUBMIT -once you have entered your first name, last name, StarID, email, class and section- SUBMIT">
+            <input class=" text-danger btn-block btn-lg" type="submit" name="Submit" value="SUBMIT -once you have completed this assignment- SUBMIT">
             <br />
         </div>
 
