--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -127,28 +127,35 @@
 
                 <li>Open a browser to: <a href="https://www.balena.io/etcher/" class="bg-info text-white" target="_blank">https://www.balena.io/etcher/ </a> </li>
 
-                <li>Download Etcher to your ' 
+                <li>Download and save Etcher to your ' 
                 <code><span id="aPath"></span></code>
                 <script>document.getElementById("aPath").innerHTML = Path; </script>
                 ' folder.<br /> </li>
 
-                <li>Open your browser to the following url:<a href="https://www.raspberrypi.org/downloads/raspbian/" class="bg-info text-white" target="_blank">https://www.raspberrypi.org/downloads/raspbian/</a>.<br />
+                <li>Use File Explorer, find your Etcher install file, and double-click to install Etcher.</li>
+
+                <li>Open a browser to: <a href="https://www.raspberrypi.org/downloads/raspbian/" class="bg-info text-white" target="_blank">https://www.raspberrypi.org/downloads/raspbian/</a>.<br />
 
                 </li>
 
                 <li>Download the latest ZIP file of the Raspbian Operating System with desktop<br />
                 <a href="RaspbianWithDesktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspbianWithDesktop.PNG', 'popup'); return false;">
-                    <img src="RaspbianWithDesktop.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Raspbian With Desktop<br />                </li>
+                    <img src="RaspbianWithDesktop.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Raspbian With Desktop<br /> 
+                </li>
 
 
                 <li>Save the ZIP file to your  ' 
                 <code><span id="bPath"></span></code>
                 <script>document.getElementById("bPath").innerHTML = Path; </script>
-                ' folder.<br /> </li>
+                ' folder.<br /> 
+
+                </li>
 
             </ol>
             <hr />
         </div>
+
+
 
         <!--Exercise 2-->
 
@@ -157,12 +164,18 @@
         <div id="Exercise02" class="collapse in  col-lg-12">
 
             <ol>
-                <li>You will need to take your SD card and put it in your SD card slot which is located on the right side of your laptop. You should feel and hear a click when the SD card is properly seated. It should be flush with the side of your laptop.</li>
-                <li>If you do not have a SD card slot see Paulson or a TA to get a SD card reader.</li>
-                <li>Open Etcher and make sure you see that it recognizes that you have an SD card in. (screenshot)</li>
-                <li>If you do not see it you will need to restart your laptop.</li>
-                <li>Take the ZIP file that your downloaded earlier and Drag and Drop it into etcher where it says select image. </li>
-                <li>Then hit Flash (it will take a few minutes).</li>
+                <li>Install the microSD card into the microSD card slot on the right side of your laptop.<br />
+
+                </li>
+
+                <li>Newer laptops without microSD slots will need to see the professor or a TA to get a microSD card reader.</li>
+                <li>Open Etcher and make sure you see that it recognizes that you have a microSD card mounted.<br />
+                    If Ether does not appear, you will need to restart your laptop.</li>
+                <li>Select the ZIP file that your downloaded earlier and Drag and Drop it into etcher where it says select image.<br />
+                <a href="FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
+                    <img src="FlashMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Flash Raspbian to microSD<br /> 
+                </li>
+                <li>Then select Flash. The process will take several minutes.</li>
             </ol>
             <hr />
         </div>
@@ -174,19 +187,74 @@
         <div id="Exercise03" class="collapse in  col-lg-12">
 
             <ol>
-                <li>While that is flashing you will need to locate a keyboard and mouse and plug them into the Pi at your station (We may not have keyboards and mice for everyone so please share). </li>
-                <li>Once the flash is complete, remove the SD card and put it into the Pi. (gif)</li>
-                <li>Plug your Keyboard and mouse into the Pi and hit the power button, which should be on top or around the monitor in front of you. You should see lights on the Pi.</li>
-                <li>Press the button with the purple dot on it.</li>
-                <li>Follow the on-screen instructions to set your country, language and Time-zone. Check the boxes that say Use English language and Use US keyboard.</li>
-                <li>Make a password and write it down. If you forget it you will need to start over.</li>
+                <li>While the microSD card is flashing, locate a USB keyboard and mouse. <br />
+                    Plug them into the Pi at your station (We may not have keyboards and mice for everyone so please share). </li>
+
+                <li>Once the flash is complete, remove the microSD card and put it into the Pi.<br />
+                <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
+                    <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br /> 
+
+                  </li>
+
+                <li>Press the power button on the Pi, which should be on top or around the monitor in front of you. You should see a red light on the Pi.</li>
+                <li>On your monitor press the button with the colored dot. <br />
+                    Note that pressing this button repeatedly swithches the monitor video signal between your laptop and the Raspberry Pi.
+                </li>
+                <li>Follow the on-screen instructions to set your country, language and Time-zone.<br />
+                    Check the boxes for &#39;Use English language&#39; and &#39;Use US keyboard&#39;.</li>
+
+                <li>Open Notepad, choose a password (Please use <code>MagicMirror%</code>).<br />
+                    Save your password in a file named  &#39;Readme.txt&#39;; in your  
+                <code><span id="cPath"></span></code>
+                <script>document.getElementById("cPath").innerHTML = Path; </script>
+                ' folder.<br /> 
+
+                </li>
+
+                <li>If you forget your password you can change it under the settings.</li>
+
                 <li>Check “This screen shows a black border around the desktop” if you have a black border.</li>
                 <li>CONNECT TO WSU GUEST ONLY!!! If prompted make an account and log in.</li>
                 <li>When asked to update, click next. The update will begin, this make take a few minutes. If asked to restart, do so.</li>
                 <li>In the upper right corner of the desktop hover over the Wi-Fi signal to determine the IP address. </li>
-                <li>Write this IP down in the same place as your password. The IP should look something like 10.20.xx.xx</li>
+                <li>Store this IP address in the ReadMe.txt file that contains your password.<br />
+                    The IP address will look something like 10.20.xx.xx<br />
+                    Note that the IP address will change about every 30 days.
+                </li>
                 <li>In the upper left corner, you will see the raspberry icon. click the raspberry icon, then preferences, and Raspberry Pi Configuration.</li>
                 <li>Click the interfaces tab and Enable SSH and VNC.</li>
+            </ol>
+            <hr />
+        </div>
+
+
+
+        <!--Exercise 4-->
+
+        <div class="col-lg-12"><a href="#Exercise02" class="btn btn-info" data-toggle="collapse">Exercise 4-Screen Shots</a></div>
+
+        <div id="Exercise04" class="collapse in  col-lg-12">
+
+            <ol>
+                <li>On the Raspberry Pi open a terminal window.</li>
+
+                <li>In the Terminal window type <code>sudo apt-get install scrot</code>.<br />
+                    Press Enter and the installation will begin.
+                </li>
+
+                <li>After scrot is installed, in the Terminal window type <code>scrot -h</code><br />
+                    This brings up information on how to use scrot.<br />
+                    Review this information.<br />
+                    Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
+                    <a href="scrot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrot.PNG', 'popup'); return false;">
+                    <img src="scrot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>scrot help<br /> 
+                    <br />
+                    </li>
+
+                <li>
+                    <a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
+                    <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots<br /> 
+                </li>
             </ol>
             <hr />
         </div>
