--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -314,7 +314,7 @@
         <div class="col-lg-12 text-primary">
             (10) 2. Assignment submission<br />
             <!-- Enter your answer in the VALUE field below   GROK -->
-            <input class="form-control" name="q10" type="text" id="q10" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder.">
+            <input class="form-control" name="q10" type="text" id="q10" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativePi01.">
             <hr />
 
         </div>
