clarified instructions to upload screen shot

--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -125,12 +125,13 @@
         <div id="Exercise01" class="collapse in  col-lg-12">
             <ol>
 
-                <li>Open a browser to: <a href="https://www.balena.io/etcher/" class="bg-info text-white" target="_blank">https://www.balena.io/etcher/ </a> </li>
+                <li>Open a browser to: <a href="https://www.balena.io/etcher/" class="bg-info text-white" target="_blank">https://www.balena.io/etcher/ </a></li>
 
                 <li>Download and save Etcher to your ' 
                 <code><span id="aPath"></span></code>
-                <script>document.getElementById("aPath").innerHTML = Path; </script>
-                ' folder.<br /> </li>
+                    <script>document.getElementById("aPath").innerHTML = Path; </script>
+                    ' folder.<br />
+                </li>
 
                 <li>Use File Explorer, find your Etcher install file, and double-click to install Etcher.</li>
 
@@ -139,15 +140,15 @@
                 </li>
 
                 <li>Download the latest ZIP file of the Raspbian Operating System with desktop<br />
-                <a href="RaspbianWithDesktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspbianWithDesktop.PNG', 'popup'); return false;">
-                    <img src="RaspbianWithDesktop.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Raspbian With Desktop<br /> 
+                    <a href="RaspbianWithDesktop.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('RaspbianWithDesktop.PNG', 'popup'); return false;">
+                        <img src="RaspbianWithDesktop.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a> Raspbian With Desktop<br />
                 </li>
 
 
                 <li>Save the ZIP file to your  ' 
                 <code><span id="bPath"></span></code>
-                <script>document.getElementById("bPath").innerHTML = Path; </script>
-                ' folder.<br /> 
+                    <script>document.getElementById("bPath").innerHTML = Path; </script>
+                    ' folder.<br />
 
                 </li>
 
@@ -172,8 +173,8 @@
                 <li>Open Etcher and make sure you see that it recognizes that you have a microSD card mounted.<br />
                     If Ether does not appear, you will need to restart your laptop.</li>
                 <li>Select the ZIP file that your downloaded earlier and Drag and Drop it into etcher where it says select image.<br />
-                <a href="FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
-                    <img src="FlashMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Flash Raspbian to microSD<br /> 
+                    <a href="FlashMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('FlashMicroSD.PNG', 'popup'); return false;">
+                        <img src="FlashMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Flash Raspbian to microSD<br />
                 </li>
                 <li>Then select Flash. The process will take several minutes.</li>
             </ol>
@@ -187,17 +188,19 @@
         <div id="Exercise03" class="collapse in  col-lg-12">
 
             <ol>
-                <li>While the microSD card is flashing, locate a USB keyboard and mouse. <br />
+                <li>While the microSD card is flashing, locate a USB keyboard and mouse.
+                    <br />
                     Plug them into the Pi at your station (We may not have keyboards and mice for everyone so please share). </li>
 
                 <li>Once the flash is complete, remove the microSD card and put it into the Pi.<br />
-                <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
-                    <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br /> 
+                    <a href="InstallMicroSD.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('InstallMicroSD.PNG', 'popup'); return false;">
+                        <img src="InstallMicroSD.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Installing microSD into the Pi<br />
 
-                  </li>
+                </li>
 
                 <li>Press the power button on the Pi, which should be on top or around the monitor in front of you. You should see a red light on the Pi.</li>
-                <li>On your monitor press the button with the colored dot. <br />
+                <li>On your monitor press the button with the colored dot.
+                    <br />
                     Note that pressing this button repeatedly swithches the monitor video signal between your laptop and the Raspberry Pi.
                 </li>
                 <li>Follow the on-screen instructions to set your country, language and Time-zone.<br />
@@ -206,8 +209,8 @@
                 <li>Open Notepad, choose a password (Please use <code>MagicMirror%</code>).<br />
                     Save your password in a file named  &#39;Readme.txt&#39;; in your  
                 <code><span id="cPath"></span></code>
-                <script>document.getElementById("cPath").innerHTML = Path; </script>
-                ' folder.<br /> 
+                    <script>document.getElementById("cPath").innerHTML = Path; </script>
+                    ' folder.<br />
 
                 </li>
 
@@ -247,13 +250,13 @@
                     Review this information.<br />
                     Note that simply typing <code>scrot</code> in the Terminal window takes a scrot (short for SCReen shOT) and stores it in your   Raspberry Pi&#39;s&nbsp; &#39;/home/pi&#39; folder.<br />
                     <a href="scrot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrot.PNG', 'popup'); return false;">
-                    <img src="scrot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>scrot help<br /> 
+                        <img src="scrot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>scrot help<br />
                     <br />
-                    </li>
+                </li>
 
                 <li>
                     <a href="ScrotShots.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('scrotShots.PNG', 'popup'); return false;">
-                    <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots<br /> 
+                        <img src="ScrotShots.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>Scrot Screen Shots<br />
                 </li>
             </ol>
             <hr />
@@ -273,28 +276,32 @@
                 Make sure that you have the following programs running on your Raspberry Pi, depicting:
             </p>
             <ul>
-                <li>Chromium web browser, open to D2L course, with your name in top right,</li>
+                <li>Chromium web browser, open to D2L: <a href="https://winona.learn.minnstate.edu/" class="bg-info text-white" target="_blank">https://winona.learn.minnstate.edu/</a>, show this course, with your name in top right,</li>
                 <li>Rasberry Pi configuration, &#39;Interfaces&#39; tab, showing VNC and SSH enabled,</li>
                 <li>Network Preferences, interface tab, set to wlan0, showing settings,</li>
                 <li>Terminal window, after running <code>cat /etc/os-release</code> and <code>scrot</code> ,</li>
             </ul>
             <br />
-            Your screen shot will look something like this:<br />
-            <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
-                <img src="ConfigurationScreenShot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>
+            <p>
+                Your screen shot name is of the format &#39;2019-08-07-125353_1080x1920.scrot.png&#39; and will look something like this:<br />
+                <a href="ConfigurationScreenShot.PNG" class="img-responsive img-rounded" target="popup" onclick="window.open('ConfigurationScreenShot.PNG', 'popup'); return false;">
+                    <img src="ConfigurationScreenShot.PNG" width="300" alt="One Drive" class="img-responsive img-responsive" /></a>
+                Suggested Screen Shot Format
+            </p>
+
             <br />
 
+            Use the File Manager and navigate to the &#39;/home/pi&#39; folder to find your screen shot.<br />
         </div>
         <div class="col-lg-12 text-primary">
             <p>
-                (50) 1. Make sure to upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
+                (50) 1. On the Raspberry Pi, use the Chromium browser to go to D2L, then upload your screenshot to the &#39;FormativePi01&#39; D2L Assignment Folder.
             </p>
-            
-        <div class="col-lg-12 text-danger">
-            <h2>Screen Shot FormativePi01</h2>
-            <hr />
-        </div>
-            <hr />
+
+            <div class="col-lg-12 text-danger">
+                <h2>Screen Shot FormativePi01</h2>
+                <hr />
+            </div>
         </div>
 
 
