--- a/FormativePi01/FormativePi01.html
+++ b/FormativePi01/FormativePi01.html
@@ -98,7 +98,7 @@
                 <li>Configure the Raspberry Pi</li>
                 <li>Use a web browser and other software on the Raspberry Pi</li>
                 <li>Install an application on the Raspberry Pi to take screen shots</li>
-                <li>Do other marvelous things.....</li>
+                <li>Upload the screen shot to D2L.</li>
             </ol>
             <hr />
         </div>
@@ -315,7 +315,6 @@
                 When all tasks are completed press the Submit button.
             </p>
             <hr />
-
         </div>
 
         <div class="col-lg-12 text-primary">
@@ -323,7 +322,6 @@
             <!-- Enter your answer in the VALUE field below   GROK -->
             <input class="form-control" name="q2" type="text" id="q2" value="I have completed all the exercises, and uploaded my screenshot to the D2L Assignment folder FormativePi01.">
             <hr />
-
         </div>
 
 
